# gterm

./: Cargo.toml  GUIDE.md  README.md  SPECIFICATION.md
.github/workflows/: release.yml
config/: default.toml
homebrew-formula/: gterm.rb
src/: app.rs  config.rs  highlighting.rs  main.rs  search.rs  theme.rs
src/editor/: buffer.rs  cursor.rs  document.rs  mod.rs
src/file_tree/: mod.rs  tree.rs
src/input/: event.rs  keyboard.rs  mod.rs  mouse.rs
src/terminal/: mod.rs
src/ui/: dialog.rs  editor.rs  file_tree.rs  layout.rs  menu_bar.rs  mod.rs  search_bar.rs  status_bar.rs  tab_bar.rs  terminal.rs
src/utils/: clipboard.rs
themes/: dark.toml  light.toml
